# vulkan-graphics-examples

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VGFConfig.hpp.in  vulkan-graphics-examples.sln  vulkan-graphics-samples.sln
doc/: CMakeLists.txt  Framework construction.fla  Mesh classes diagram.fla  Sequence of Multiple thread of Multiple Pass.txt  UI Construction Design.fla  class-diagram.vsdx  construction-point.txt  coordinate_system.txt  doxyfile.in  note.txt  todo.txt  vscode_cpp_include_path
framework/: CMakeLists.txt
framework/foundation/: CMakeLists.txt  cost_timer.cpp  cost_timer.hpp  foundation.hpp  gemo.cpp  gemo.hpp  gemo.inl  global.cpp  global.hpp  wrapper.cpp  wrapper.hpp
framework/foundation/config/: config.hpp.in
framework/foundation/foundation/: config.hpp  cost_timer.cpp  cost_timer.hpp  gemo.cpp  gemo.hpp  gemo.inl  global.cpp  global.hpp  module.cpp  module.hpp  util.hpp  wrapper.cpp  wrapper.hpp
framework/framework/: CMakeLists.txt  config.hpp.in  framework.hpp  global.cpp  global.hpp  module.cpp  module.hpp
framework/framework/app/: app.cpp  app.hpp  app.inl  window.cpp  window.hpp  window.inl
framework/framework/config/: config.hpp.in
framework/framework/framework/: config.hpp  framework.hpp  global.cpp  global.hpp  module.cpp  module.hpp
framework/framework/util/: macro_util.hpp
framework/framework/world/: entity.cpp  scene.hpp
framework/graphics/: CMakeLists.txt  base.cpp  base.hpp  config.hpp.in  global.hpp  graphics.hpp  module.cpp  module.hpp  vulkan_ext.hpp
framework/graphics/app/: app.cpp  app.hpp
framework/graphics/buffer_data/: descriptor_set_data.cpp  descriptor_set_data.hpp  index_data.cpp  index_data.hpp  uniform_buffer_data.cpp  uniform_buffer_data.hpp  uniform_buffer_data.inl  util.cpp  util.hpp  vertex_data.cpp  vertex_data.hpp  vertex_data_option.hpp
framework/graphics/config/: config.hpp.in
framework/graphics/graphics/: base.cpp  base.hpp  config.hpp  global.cpp  global.hpp  graphics.hpp  module.cpp  module.hpp  vulkan_ext.hpp
framework/graphics/material/: cmd.cpp  cmd.hpp  material.cpp  material.hpp  material_data.cpp  material_data.hpp  material_data.inl  pass.cpp  pass.hpp  pass.inl  pass_option.cpp  pass_option.hpp  render_pass_info.cpp  render_pass_info.hpp  shader.cpp  shader.hpp  visualizer.cpp  visualizer.hpp
framework/graphics/mesh/: mesh.cpp  mesh.hpp  mesh.inl  mesh_2.cpp  mesh_2.hpp  mesh_3.cpp  mesh_3.hpp  mesh_data.cpp  mesh_data.hpp  mesh_data.inl  mesh_option.hpp
framework/graphics/pass/: pass.cpp  pass.hpp  pass.inl  pass_data.cpp  pass_data.hpp  pass_option.cpp  pass_option.hpp  shader.cpp  shader.hpp
framework/graphics/pipeline/: pipeline_cache.cpp
framework/graphics/renderer/: cmd_parser.cpp  cmd_parser.hpp  pipeline_cache.cpp  pipeline_cache.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  renderer.inl  renderer_2.cpp  renderer_2.hpp  renderer_3.cpp  renderer_3.hpp  renderer_color_texture.cpp  renderer_option.cpp  renderer_option.hpp  renderer_surface.cpp  renderer_surface.hpp
framework/graphics/scene/: camera.cpp  camera.hpp  camera_3.cpp  camera_3.hpp  camera_op.cpp  camera_op.hpp  (+35 more)
framework/graphics_ext/: CMakeLists.txt  global.hpp  graphics_ext.hpp
framework/kimgui/: CMakeLists.txt  global.hpp  kimgui.hpp  module.cpp  module.hpp
framework/vgim/: CMakeLists.txt  config.hpp.in  global.hpp  module.cpp  module.hpp  renderer_2.hpp  renderer_3.hpp  renderer_indep.hpp  vgim.hpp
generator/embed_file/: CMakeLists.txt  embed_binary_file.cpp  embed_file.cpp
libs/: CMakeLists.txt  readme.txt
samples/: CMakeLists.txt  readme
samples/chalet/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  window.cpp  window.hpp
samples/cubemaps/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/dynamic_uniform_buffer/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/external_uniform_buffer/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/libs/: CMakeLists.txt
samples/mesh/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/off_screen/: CMakeLists.txt  app.cpp  main.cpp  material_ground_mirror.hpp  visualizer_ground_mirror.hpp  window.cpp  window.hpp
samples/outline/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/passes/: CMakeLists.txt  app.cpp  main.cpp  material_deferred.cpp  material_deferred.hpp  window.cpp  window.hpp
samples/pipelines/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  window.cpp  window.hpp
samples/point_light/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  window.cpp  window.hpp
samples/post_render/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/pre_depth_tex/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/pre_z_tex/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/push_constants/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/sampleslib/: CMakeLists.txt  app.cpp  app.hpp  mesh_assimp.cpp  mesh_assimp.hpp  scene_assimp.cpp  scene_assimp.hpp  window.cpp  window.hpp  window.inl
samples/specialization_constants/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/spot_direct_light/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/spot_light/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/texture/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/texture_array/: CMakeLists.txt  app.cpp  main.cpp  window.cpp  window.hpp
samples/triangle/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  window.cpp  window.hpp
samples/triangle_2d/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  window.cpp  window.hpp
test/: CMakeLists.txt
test/test-gemo/: CMakeLists.txt  main.cpp
test/test-triangle/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  window.cpp  window.hpp
test/test-triangle-2d/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  window.cpp  window.hpp
test/test_gemo/: CMakeLists.txt  main.cpp
test/testlib/: CMakeLists.txt  app.cpp  app.hpp  window.cpp  window.hpp  window.inl
(+682 files in other folders)
