set(VG_VERSION_MAJOR "0")
set(VG_VERSION_MINOR "0")
set(VG_VERSION_PATCH "1")
set(VG_VERSION_EXTRA "")
set(VG_VERSION "${VG_VERSION_MAJOR}.${VG_VERSION_MINOR}")
set(VG_VERSION_FULL "${VG_VERSION}.${VG_VERSION_PATCH}${VG_VERSION_EXTRA}")

option(VG_ENABLE_VALIDATION_LAYERS "Enable features of vulkan validation layers." ON)
option(VG_ENABLE_COST_TIMER "Enable cost timer for the important step." OFF)

set(LIBRARY_NAME "graphics")
configure_file(
	"${CMAKE_CURRENT_SOURCE_DIR}/config/config.hpp.in"
	"${CMAKE_CURRENT_SOURCE_DIR}/${LIBRARY_NAME}/config.hpp"
)
set(INCLUDE_DIRS ${INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}")
file(GLOB_RECURSE HEADERS "${LIBRARY_NAME}/*.hpp" "${LIBRARY_NAME}/*.inl")
file(GLOB_RECURSE SOURCES "${LIBRARY_NAME}/*.cpp")
include_directories(${INCLUDE_DIRS})
add_library(${LIBRARY_NAME} STATIC ${HEADERS} ${SOURCES})
set_property(TARGET ${LIBRARY_NAME} PROPERTY FOLDER ${FOLDER_NAME})
set(LIBRARIES ${LIBRARIES} ${LIBRARY_NAME})

# install
install (TARGETS ${LIBRARY_NAME} DESTINATION bin)
install (FILES ${HEADERS} DESTINATION include)

set(INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
set(LIBRARIES ${LIBRARIES} PARENT_SCOPE)
